# trabalho-3-brayanleo1

./: .gitignore  CMakeLists.txt  README.md
data/: easiest.txt  easy.txt  easyImpPack.txt  easyPack.txt  impossible.txt  maze1C.txt  maze2.txt  mazePack.txt  very easy.txt
include/: Arquivo.h  Level.h  Player.h  Snake.h  SnakeGame.h
src/: Arquivo.cpp  Level.cpp  Player.cpp  Snake.cpp  SnakeGame.cpp
